sql/backup/data_backup.cc
@@ -248,7 +248,7 @@ class Scheduler
  private:
 
   LIST   *m_pumps, *m_last;
-  Logger *m_log;        ///< used to report errors if not NULL
+  Logger &m_log;        ///< for reporting errors          
   uint   m_count;       ///< current number of pumps
   size_t m_total;       ///< accumulated position of all drivers
   size_t m_init_left;   ///< how much of init data is left (estimate)
@@ -256,7 +256,7 @@ class Scheduler
   Output_stream &m_str; ///< stream to which we write
   bool   cancelled;     ///< true if backup process was cancelled
 
-  Scheduler(Output_stream &s, Logger *log)
+  Scheduler(Output_stream &s, Logger &log)
     :init_count(0), prepare_count(0), finish_count(0),
     m_pumps(NULL), m_last(NULL), m_log(log),
     m_count(0), m_total(0), m_init_left(0), m_known_count(0),
@@ -427,7 +427,8 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
   if (info.snap_count() == 0 || info.table_count() == 0) // nothing to backup
     DBUG_RETURN(0);
 
-  Scheduler   sch(s, &info.m_ctx);          // scheduler instance
+  Logger      &log= info.m_log;
+  Scheduler   sch(s, log);          // scheduler instance
   List<Scheduler::Pump>  inactive;  // list of images not yet being created
 
   // keeps maximal init size for images in inactive list
@@ -448,9 +449,15 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
 
     Scheduler::Pump *p= new Scheduler::Pump(*i, s);
 
-    if (!p || !p->is_valid())
+    if (!p)
     {
-      info.m_ctx.fatal_error(ER_OUT_OF_RESOURCES);
+      log.report_error(ER_OUT_OF_RESOURCES);
+      goto error;
+    }
+    if (!p->is_valid())
+    {
+      log.report_error(ER_BACKUP_CREATE_BACKUP_DRIVER,p->m_name);
+      delete p;
       goto error;
     }
 
@@ -458,7 +465,7 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
 
     if (init_size == Driver::UNKNOWN_SIZE)
     {
-      if (sch.add(p))
+      if (sch.add(p))    // logs errors
         goto error;
     }
     else
@@ -471,7 +478,7 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
         /* Allocation failed. 
            Error has been reported, but not logged to backup logs.
         */
-        info.m_ctx.log_error(ER_OUT_OF_RESOURCES);
+        log.log_error(ER_OUT_OF_RESOURCES);
         goto error;
       }
     }
@@ -529,7 +536,7 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
 
     // poll drivers
 
-    if (sch.step())
+    if (sch.step())    // logs errors
       goto error;
   }
 
@@ -571,7 +578,7 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
     if (error)
       goto error;
 
-    if (sch.prepare())
+    if (sch.prepare())    // logs errors
       goto error;
 
     while (sch.prepare_count > 0)
@@ -584,7 +591,7 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
 
     LOG_INFO binlog_pos;
     
-    info.m_ctx.report_state(BUP_VALIDITY_POINT);
+    log.report_state(BUP_VALIDITY_POINT);
     /*
       This breakpoint is used to assist in testing state changes for
       the backup progress. It is not to be used to indicate actual
@@ -597,7 +604,7 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
     */
 
     DEBUG_SYNC(thd, "before_backup_data_lock");
-    if (sch.lock())
+    if (sch.lock())    // logs errors
       goto error;
 
     /*
@@ -606,7 +613,7 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
     if (mysql_bin_log.is_open())
       if (mysql_bin_log.get_current_log(&binlog_pos))
       {
-        info.m_ctx.fatal_error(ER_BACKUP_BINLOG);
+        log.report_error(ER_BACKUP_BINLOG);
         goto error;
       }
 
@@ -629,7 +636,7 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
     vp_time= my_time(0);
 
     DEBUG_SYNC(thd, "before_backup_data_unlock");
-    if (sch.unlock())
+    if (sch.unlock())    // logs errors
       goto error;
 
     /*
@@ -643,12 +650,12 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
     // Report and save information about VP
 
     info.save_vp_time(vp_time);
-    info.m_ctx.report_vp_time(vp_time, TRUE); // TRUE = also write to progress log
+    log.report_vp_time(vp_time, TRUE); // TRUE = also write to progress log
 
     if (mysql_bin_log.is_open())
     {
       info.save_binlog_pos(binlog_pos);
-      info.m_ctx.report_binlog_pos(info.binlog_pos);
+      log.report_binlog_pos(info.binlog_pos);
     }
 
     /*
@@ -656,9 +663,10 @@ int write_table_data(THD* thd, Backup_info &info, Output_stream &s)
       write it to the log.
     */
     if (obs::is_slave() && master_pos.pos)
-      info.m_ctx.report_master_binlog_pos(master_pos);
+      log.report_master_binlog_pos(master_pos);
 
-    info.m_ctx.report_state(BUP_RUNNING);
+    log.report_state(BUP_RUNNING);
+
     DEBUG_SYNC(thd, "after_backup_binlog");
 
     /**** VP creation (end) ********************************************/
@@ -819,9 +827,6 @@ int Scheduler::step()
 
     case backup_state::ERROR:
       remove_pump(p);   // Note: never errors.
-      if (res)
-        cancel_backup(); // we hit an error - bail out
-                         // Note: cancel_backup() never errors.
       break;
 
     default: break;
@@ -846,11 +851,14 @@ int Scheduler::add(Pump *p)
   if (!p)  // no pump to add
     return 0;
 
-  p->set_logger(m_log);
+  p->set_logger(&m_log);
   p->start_pos= avg;
 
-  if (p->begin())
-    goto error;
+  if (p->begin())  // logs errors
+  {
+    delete p;
+    return ERROR;
+  }
 
   // in case of error, above call should return non-zero code (and report error)
   DBUG_ASSERT(p->state != backup_state::ERROR);
@@ -894,12 +902,6 @@ int Scheduler::add(Pump *p)
                             (unsigned long)m_init_left));
 
   return 0;
-
- error:
-
-  delete p;
-  cancel_backup();
-  return ERROR;
 }
 
 /// Move backup pump to the end of scheduler's list.
@@ -971,9 +973,9 @@ int Scheduler::prepare()
 
   for (Pump_iterator it(*this); it; ++it)
   {
-    if (it->prepare())
+    if (it->prepare())  // logs errors
     {
-      cancel_backup();  // Note: never errors.
+      remove_pump(it);  // Note: never errors.
       return ERROR;
     }
     if (it->state == backup_state::PREPARING)
@@ -994,9 +996,9 @@ int Scheduler::lock()
   DBUG_PRINT("backup_data",("calling lock() for all drivers"));
 
   for (Pump_iterator it(*this); it; ++it)
-   if (it->lock())
+   if (it->lock())    // logs errors
    {
-     cancel_backup();  // Note: never errors.
+     remove_pump(it);  // Note: never errors.
      return ERROR;
    }
 
@@ -1013,9 +1015,9 @@ int Scheduler::unlock()
 
   for(Pump_iterator it(*this); it; ++it)
   {
-    if (it->unlock())
+    if (it->unlock())   // logs errors
     {
-      cancel_backup();  // Note: never errors.
+      remove_pump(it);  // Note: never errors.
       return ERROR;
     }
     if (it->state == backup_state::FINISHING)
@@ -1072,9 +1074,7 @@ int Backup_pump::begin()
   if (ERROR == m_drv->begin(m_bw.buf_size))
   {
     state= backup_state::ERROR;
-    // We check if logger is always setup. Later the assertion can
-    // be replaced with "if (m_log)"
-    DBUG_ASSERT(m_log);
+    if (m_log)
       m_log->report_error(ER_BACKUP_INIT_BACKUP_DRIVER, m_name);
     return ERROR;
   }
@@ -1092,7 +1092,7 @@ int Backup_pump::end()
     if (ERROR == m_drv->end())
     {
       state= backup_state::ERROR;
-      DBUG_ASSERT(m_log);
+      if (m_log)
         m_log->report_error(ER_BACKUP_STOP_BACKUP_DRIVER, m_name);
       return ERROR;
     }
@@ -1121,9 +1121,9 @@ int Backup_pump::prepare()
   case ERROR:
   default:
     state= backup_state::ERROR;
-    DBUG_ASSERT(m_log);
+    if (m_log)
       m_log->report_error(ER_BACKUP_PREPARE_DRIVER, m_name);
-      return ERROR;
+    return ERROR;
   }
 
   DBUG_PRINT("backup_data",(" preparing %s, goes to %s state",
@@ -1138,7 +1138,7 @@ int Backup_pump::lock()
   if (ERROR == m_drv->lock())
   {
     state= backup_state::ERROR;
-    DBUG_ASSERT(m_log);
+    if (m_log)
       m_log->report_error(ER_BACKUP_CREATE_VP, m_name);
     return ERROR;
   }
@@ -1154,7 +1154,7 @@ int Backup_pump::unlock()
   if (ERROR == m_drv->unlock())
   {
     state= backup_state::ERROR;
-    DBUG_ASSERT(m_log);
+    if (m_log)
       m_log->report_error(ER_BACKUP_UNLOCK_DRIVER, m_name);
     return ERROR;
   }
@@ -1167,7 +1167,7 @@ int Backup_pump::cancel()
   if (ERROR == m_drv->cancel())
   {
     state= backup_state::ERROR;
-    DBUG_ASSERT(m_log);
+    if (m_log)
       m_log->report_error(ER_BACKUP_CANCEL_BACKUP, m_name);
     return ERROR;
   }
@@ -1248,7 +1248,7 @@ int Backup_pump::pump(size_t *howmuch)
 
         case Block_writer::ERROR:
         default:
-          DBUG_ASSERT(m_log);
+          if (m_log)
             m_log->report_error(ER_BACKUP_GET_BUF);
           state= backup_state::ERROR;
           return ERROR;
@@ -1293,7 +1293,7 @@ int Backup_pump::pump(size_t *howmuch)
 
       case ERROR:
       default:
-        DBUG_ASSERT(m_log);
+        if (m_log)
           m_log->report_error(ER_BACKUP_GET_DATA, m_name);
         state= backup_state::ERROR;
         return ERROR;
@@ -1328,7 +1328,7 @@ int Backup_pump::pump(size_t *howmuch)
 
       case Block_writer::ERROR:
 
-        DBUG_ASSERT(m_log);
+        if (m_log)
           m_log->report_error(ER_BACKUP_WRITE_DATA, m_name, m_buf.table_num);
         state= backup_state::ERROR;
         return ERROR;
@@ -1371,11 +1371,26 @@ int restore_table_data(THD *thd, Restore_info &info, Input_stream &s)
   if (info.snap_count() == 0 || info.table_count() == 0) // nothing to restore
     DBUG_RETURN(0);
 
-  Restore_driver* drv[256];
+  Logger &log= info.m_log;
 
-  if (info.snap_count() > 256)
+  /* Drv[n] points at restore driver used to process snapshot n. */
+  Restore_driver* drv[MAX_SNAP_COUNT];
+  /*
+    Active[n] is not NULL if driver drv[n] has been activated. Such driver needs 
+    an end() or cancel() call to shut it down properly.
+  */ 
+  Restore_driver* active[MAX_SNAP_COUNT];
+  /*
+    Bad_drivers string for holding comma separated list of drivers which
+    signalled errors during shutdown. If non-empty, an error will be logged
+    at the end of the function (finish: label).
+   */   
+  String bad_drivers;
+
+  if (info.snap_count() > MAX_SNAP_COUNT)
   {
-    info.m_ctx.fatal_error(ER_BACKUP_TOO_MANY_IMAGES, info.snap_count(), 256);
+    log.report_error(ER_BACKUP_TOO_MANY_IMAGES,
+                     info.snap_count(), MAX_SNAP_COUNT);
     DBUG_RETURN(ERROR);
   }
 
@@ -1384,7 +1399,7 @@ int restore_table_data(THD *thd, Restore_info &info, Input_stream &s)
 
   for (uint n=0; n < info.snap_count(); ++n)
   {
-    drv[n]= NULL;
+    active[n]= drv[n]= NULL;
 
     Snapshot_info *snap= info.m_snap[n];
 
@@ -1395,7 +1410,7 @@ int restore_table_data(THD *thd, Restore_info &info, Input_stream &s)
     res= snap->get_restore_driver(drv[n]);
     if (res == backup::ERROR)
     {
-      info.m_ctx.fatal_error(ER_BACKUP_CREATE_RESTORE_DRIVER, snap->name());
+      log.report_error(ER_BACKUP_CREATE_RESTORE_DRIVER, snap->name());
       goto error;
     };   
  }
@@ -1406,9 +1421,11 @@ int restore_table_data(THD *thd, Restore_info &info, Input_stream &s)
     res= drv[n]->begin(0);
     if (res == backup::ERROR)
     {
-      info.m_ctx.fatal_error(ER_BACKUP_INIT_RESTORE_DRIVER, info.m_snap[n]->name());
+      log.report_error(ER_BACKUP_INIT_RESTORE_DRIVER, info.m_snap[n]->name());
       goto error;
     }
+    
+    active[n]= drv[n];
   }
 
   DEBUG_SYNC(thd, "restore_in_progress");
@@ -1449,9 +1466,8 @@ int restore_table_data(THD *thd, Restore_info &info, Input_stream &s)
           break;
 
         case BSTREAM_ERROR:
-          info.m_ctx.fatal_error(ER_BACKUP_READ_DATA);
+          log.report_error(ER_BACKUP_READ_DATA);
         default:
-          state= ERROR;
           goto error;
 
         }
@@ -1491,7 +1507,8 @@ int restore_table_data(THD *thd, Restore_info &info, Input_stream &s)
          */
         DBUG_ASSERT(snap && drvr);
 
-        switch( drvr->send_data(buf) ) {
+        ret= drvr->send_data(buf);
+        switch (ret) {
 
         case backup::OK:
           info.data_size += buf.size;
@@ -1504,8 +1521,13 @@ int restore_table_data(THD *thd, Restore_info &info, Input_stream &s)
         case backup::ERROR:
           if( errors > MAX_ERRORS )
           {
-            info.m_ctx.fatal_error(ER_BACKUP_SEND_DATA, buf.table_num, snap->name());
-            state= ERROR;
+            log.report_error(ER_BACKUP_SEND_DATA, buf.table_num, snap->name());
+            /*
+              If driver signals error then it is not active any longer - neither 
+              ->end() nor ->cancel() should be called on it, only ->free(). 
+              This is why we need to remove it from active[] array.
+            */
+            active[snap_num]= NULL;
             goto error;
           }
           errors++;
@@ -1516,8 +1538,7 @@ int restore_table_data(THD *thd, Restore_info &info, Input_stream &s)
         default:
           if( repeats > MAX_REPEATS )
           {
-            info.m_ctx.fatal_error(ER_BACKUP_SEND_DATA_RETRY, repeats, snap->name());
-            state= ERROR;
+            log.report_error(ER_BACKUP_SEND_DATA_RETRY, repeats, snap->name());
             goto error;
           }
           repeats++;
@@ -1526,7 +1547,7 @@ int restore_table_data(THD *thd, Restore_info &info, Input_stream &s)
 
       default:
         break;
-      } // switch(state)
+      } // switch(ret)
 
     } // main reading loop
 
@@ -1536,49 +1557,69 @@ int restore_table_data(THD *thd, Restore_info &info, Input_stream &s)
   }
 
   DEBUG_SYNC(::current_thd, "restore_table_data_before_end");
-  
-  { // Shutting down drivers
 
-    String bad_drivers;
+  // Call end() for all active drivers.
 
-    for (uint n=0; n < info.snap_count(); ++n)
+  for (uint n=0; n < info.snap_count(); ++n)
+  {
+    if (!active[n])
+      continue;
+
+    DBUG_PRINT("restore",("Shutting down restore driver %s",
+                           info.m_snap[n]->name()));
+    res= active[n]->end();
+    if (res == backup::ERROR)
     {
-      if (!drv[n])
-        continue;
+      state= ERROR;
 
-      DBUG_PRINT("restore",("Shutting down restore driver %s",
-                            info.m_snap[n]->name()));
-      res= drv[n]->end();
-      if (res == backup::ERROR)
-      {
-        state= ERROR;
-
-        if (!bad_drivers.is_empty())
-          bad_drivers.append(",");
-        bad_drivers.append(info.m_snap[n]->name());
-      }
-      drv[n]->free();                           // Never errors
+      if (!bad_drivers.is_empty())
+        bad_drivers.append(",");
+      bad_drivers.append(info.m_snap[n]->name());
     }
-
-    if (!bad_drivers.is_empty())
-      info.m_ctx.report_error(ER_BACKUP_STOP_RESTORE_DRIVERS, bad_drivers.c_ptr());
   }
 
-  DBUG_RETURN(state == ERROR ? backup::ERROR : 0);
+  goto finish;
 
- error:
+error:
+
+  state= ERROR;
 
   DBUG_PRINT("restore",("Cancelling restore process"));
+
+  // Call cancel() for all active drivers
+
+  for (uint n=0; n < info.snap_count(); ++n)
+  {
+    if (!active[n])
+      continue;
+
+    DBUG_PRINT("restore",("Cancelling restore driver %s",
+                           info.m_snap[n]->name()));
+    res= active[n]->cancel();
+
+    if (res)
+    {
+      if (!bad_drivers.is_empty())
+        bad_drivers.append(",");
+      bad_drivers.append(info.m_snap[n]->name());
+    }
+  }
+
+finish:  
+
+  if (!bad_drivers.is_empty())
+    log.report_error(ER_BACKUP_STOP_RESTORE_DRIVERS, bad_drivers.c_ptr());
+
+  // Call free() for all existing drivers
 
   for (uint n=0; n < info.snap_count(); ++n)
   {
     if (!drv[n])
       continue;
-
     drv[n]->free();                             // Never errors
   }
 
-  DBUG_RETURN(backup::ERROR);
+  DBUG_RETURN(state == ERROR ? backup::ERROR : 0);
 }
 
 
